# circleci-cli-py

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  add-new-versions.py  lint.sh  requirements.txt  setup.cfg  setup.py  tox.ini  validate.sh
.circleci/: config.yml
.github/workflows/: add-new-versions.yml  tests.yml
templates/: README.md.j2  setup.py.j2
testing/: config.yml
