[metadata]
name = circleci_cli_py
description = Making CircleCI CLI pip installable
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaC/hadolint-py
author = Aleksa Cukovic
author_email = aleksacukovic1@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    templates*
    testing*
